kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: wanderlust
  labels: { app: frontend }
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: hammad558/wanderlust-frontend:0-initial
          ports: [{ containerPort: 80 }]
          resources:
            requests: { cpu: 50m,  memory: 64Mi }
            limits:   { cpu: 200m, memory: 256Mi }
          readinessProbe:
            httpGet: { path: /, port: 80 }
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: wanderlust
spec:
  selector: { app: frontend }
  ports: [{ port: 80, targetPort: 80 }]
